snapshots/phase-08/hubble/05-ingress-deny-hubble.txt
Jul 26 17:59:37.475: 10.244.1.39:58332 (remote-node) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:38.056: 10.244.0.206:39002 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:59:40.212: 10.244.1.39:43992 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:40.212: 10.244.1.39:43992 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:40.367: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:40.367: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) <- 10.10.10.21:4244 (remote-node) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:40.464: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) <- 10.10.10.20:443 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:40.464: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) -> 10.10.10.20:6443 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:59:40.803: 10.244.1.39:37456 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:59:40.803: 10.244.1.39:37456 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:59:40.803: 10.244.1.39:37456 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:40.803: 10.244.1.39:37456 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:40.803: 10.244.1.39:37456 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:40.804: 10.244.1.39:37456 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:40.804: 10.244.1.39:37456 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:40.899: 10.244.1.39:37464 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:59:40.900: 10.244.1.39:37464 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:59:40.900: 10.244.1.39:37464 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:40.900: 10.244.1.39:37464 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:40.900: 10.244.1.39:37464 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:40.900: 10.244.1.39:37464 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:40.900: 10.244.1.39:37464 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:40.984: 10.244.2.108:36958 (host) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:40.984: 10.244.2.108:36958 (host) <- 10.244.2.36:4240 (health) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:42.747: 10.244.2.108 (host) -> 10.244.2.36 (health) to-endpoint FORWARDED (ICMPv4 EchoRequest)
Jul 26 17:59:42.747: 10.244.2.108 (host) <- 10.244.2.36 (health) to-stack FORWARDED (ICMPv4 EchoReply)
Jul 26 17:59:43.680: 10.244.1.39:49140 (host) <- 10.244.1.219:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:59:43.680: 10.244.1.39:49140 (host) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:44.630: 10.244.0.206:45466 (remote-node) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:44.630: 10.244.0.206:45466 (remote-node) <- 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:59:44.643: 10.244.0.206:45466 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:59:44.643: 10.244.0.206:55920 (host) <- 10.244.0.174:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:59:44.643: 10.244.0.206:55920 (host) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:44.914: 10.244.2.108:52194 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:59:44.920: 10.244.2.108:52194 (remote-node) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:45.440: 10.244.0.206:45466 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:59:45.722: 10.244.2.108:52194 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:59:45.735: 10.244.0.206:42720 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:59:45.735: 10.244.0.206:42720 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:59:45.735: 10.244.0.206:42720 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:45.735: 10.244.0.206:42720 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:45.736: 10.244.0.206:42720 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:45.736: 10.244.0.206:42720 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:45.736: 10.244.0.206:42720 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:45.736: 10.244.0.206:42720 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:46.333: 10.244.2.108:40864 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:59:46.333: 10.244.2.108:40864 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:59:46.334: 10.244.2.108:40864 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:46.334: 10.244.2.108:40864 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:46.335: 10.244.2.108:40864 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:46.337: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:46.337: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:59:46.340: 10.244.2.108:40864 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:46.340: 10.244.2.108:40864 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:46.341: 10.244.2.108:40864 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:46.842: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) <- 10.10.10.20:4244 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:46.842: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) -> 10.10.10.20:4244 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:59:46.854: 10.244.0.206:39850 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:59:46.854: 10.244.0.206:39850 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:59:46.854: 10.244.0.206:39850 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:46.854: 10.244.0.206:39850 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:46.854: 10.244.0.206:39850 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:46.854: 10.244.0.206:39850 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:47.041: 10.244.2.108:40870 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:59:47.041: 10.244.2.108:40870 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:59:47.041: 10.244.2.108:40870 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:47.042: 10.244.2.108:40870 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:47.043: 10.244.2.108:40870 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:47.044: 10.244.2.108:40870 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, RST)
Jul 26 17:59:47.987: kube-system/hubble-relay-599d47597b-8zpsw:43636 (ID:36220) <- 10.10.10.22:443 (host) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:44.920: 10.244.2.108:52194 (remote-node) <- 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:59:46.854: 10.244.0.206:39850 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:47.987: kube-system/hubble-relay-599d47597b-8zpsw:43636 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:59:49.750: 10.244.2.108:45444 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:59:49.763: 10.244.2.108:45444 (remote-node) <- 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:59:49.796: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) <- 10.10.10.21:4244 (remote-node) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:49.800: 10.244.1.39:42872 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:59:49.800: 10.244.1.39:42872 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:59:49.800: 10.244.1.39:42872 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:49.801: 10.244.1.39:42872 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:49.802: 10.244.1.39:42872 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:49.802: 10.244.1.39:42872 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:49.803: 10.244.1.39:42872 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:49.803: 10.244.1.39:42872 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:50.212: 10.244.1.39:41472 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:59:50.212: 10.244.1.39:41472 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:59:50.212: 10.244.1.39:41472 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:50.212: 10.244.1.39:41472 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:50.212: 10.244.1.39:41472 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:50.213: 10.244.1.39:41472 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:50.213: 10.244.1.39:41472 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:50.213: 10.244.1.39:41472 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:50.803: 10.244.1.39:51648 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:59:50.803: 10.244.1.39:51648 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:59:50.803: 10.244.1.39:51648 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:50.804: 10.244.1.39:51648 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:50.805: 10.244.1.39:51648 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:50.805: 10.244.1.39:51648 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:50.805: 10.244.1.39:51648 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:49.763: 10.244.2.108:45444 (remote-node) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:49.796: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) -> 10.10.10.21:4244 (remote-node) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:59:50.899: 10.244.1.39:51664 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:59:50.899: 10.244.1.39:51664 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:59:50.899: 10.244.1.39:51664 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:50.899: 10.244.1.39:51664 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:50.899: 10.244.1.39:51664 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:50.899: 10.244.1.39:51664 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:50.901: 10.244.1.39:51664 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:50.901: 10.244.1.39:51664 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:52.383: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) <- 10.10.10.20:4244 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:52.383: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) -> 10.10.10.20:4244 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:59:52.384: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:52.386: 10.244.1.39:58332 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:59:52.394: 10.244.1.39:58332 (remote-node) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:52.394: 10.244.1.39:58332 (remote-node) <- 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:59:52.828: 10.244.1.39:58332 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:59:53.340: 10.244.0.206:39002 (remote-node) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:53.347: 10.244.0.206:39002 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:59:52.384: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:59:53.415: 10.244.0.206:39002 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:59:55.734: 10.244.0.206:47356 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:59:55.734: 10.244.0.206:47356 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:59:55.734: 10.244.0.206:47356 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:55.734: 10.244.0.206:47356 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:55.734: 10.244.0.206:47356 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:55.734: 10.244.0.206:47356 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:55.735: 10.244.0.206:47356 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:55.735: 10.244.0.206:47356 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:56.332: 10.244.2.108:35288 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:59:56.332: 10.244.2.108:35288 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:59:56.332: 10.244.2.108:35288 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:56.332: 10.244.2.108:35288 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:56.333: 10.244.2.108:35288 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:56.334: 10.244.2.108:35288 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:56.334: 10.244.2.108:35288 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:56.334: 10.244.2.108:35288 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:56.853: 10.244.0.206:47952 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:59:56.853: 10.244.0.206:47952 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:59:56.853: 10.244.0.206:47952 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:56.854: 10.244.0.206:47952 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:56.854: 10.244.0.206:47952 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:56.854: 10.244.0.206:47952 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:56.854: 10.244.0.206:47952 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:57.042: 10.244.2.108:35290 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:59:57.042: 10.244.2.108:35290 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:59:57.042: 10.244.2.108:35290 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:57.042: 10.244.2.108:35290 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:57.043: 10.244.2.108:35290 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:57.044: 10.244.2.108:35290 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:57.044: 10.244.2.108:35290 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:57.044: 10.244.2.108:35290 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:57.779: 10.244.2.108:36958 (host) <- 10.244.2.36:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:59:53.340: 10.244.0.206:39002 (remote-node) <- 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 17:59:56.854: 10.244.0.206:47952 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:57.779: 10.244.2.108:36958 (host) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:59.034: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) <- 10.10.10.21:4244 (remote-node) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:59.034: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) -> 10.10.10.21:4244 (remote-node) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:59:59.035: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:59.035: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:59:59.040: 10.244.1.39:49140 (host) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:59.040: 10.244.1.39:49140 (host) <- 10.244.1.219:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 17:59:59.800: 10.244.1.39:49686 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 17:59:59.800: 10.244.1.39:49686 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 17:59:59.800: 10.244.1.39:49686 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 17:59:59.801: 10.244.1.39:49686 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:59.801: 10.244.1.39:49686 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:59.801: 10.244.1.39:49686 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:59.801: 10.244.1.39:49686 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 17:59:59.990: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) <- 10.10.10.20:4244 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 17:59:59.990: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) -> 10.10.10.20:4244 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 18:00:00.003: 10.244.0.206:55920 (host) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:00.003: 10.244.0.206:55920 (host) <- 10.244.0.174:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 18:00:00.211: 10.244.1.39:52436 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:00.211: 10.244.1.39:52436 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:00.211: 10.244.1.39:52436 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:00.212: 10.244.1.39:52436 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:00.212: 10.244.1.39:52436 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:00.212: 10.244.1.39:52436 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:00.212: 10.244.1.39:52436 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:00.786: 10.244.0.206:45466 (remote-node) <- 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:00.786: 10.244.0.206:45466 (remote-node) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:00.800: 10.244.0.206:45466 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:00.804: 10.244.1.39:57490 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:00.804: 10.244.1.39:57490 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:00.804: 10.244.1.39:57490 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:00.804: 10.244.1.39:57490 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:00.804: 10.244.1.39:57490 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:00.804: 10.244.1.39:57490 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:00.804: 10.244.1.39:57490 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:00.899: 10.244.1.39:57498 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:00.899: 10.244.1.39:57498 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:00.899: 10.244.1.39:57498 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:00.899: 10.244.1.39:57498 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:00.900: 10.244.1.39:57498 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:00.900: 10.244.1.39:57498 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:00.900: 10.244.1.39:57498 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:01.082: 10.244.2.108:52194 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:01.088: 10.244.2.108:52194 (remote-node) <- 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:01.088: 10.244.2.108:52194 (remote-node) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:01.095: 10.244.1.39:50532 (remote-node) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:01.095: 10.244.1.39:50532 (remote-node) <- 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:01.095: 10.244.1.39 (remote-node) -> 10.244.2.36 (health) to-endpoint FORWARDED (ICMPv4 EchoRequest)
Jul 26 18:00:01.095: 10.244.1.39 (remote-node) <- 10.244.2.36 (health) to-overlay FORWARDED (ICMPv4 EchoReply)
Jul 26 18:00:01.095: 10.244.1.39:50532 (remote-node) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:01.096: 10.244.1.39:50532 (remote-node) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:01.101: 10.244.1.39:50532 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: SYN)
Jul 26 18:00:01.101: 10.244.1.39 (remote-node) <> 10.244.2.36 (health) to-overlay FORWARDED (ICMPv4 EchoRequest)
Jul 26 18:00:01.102: 10.244.1.39:50532 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:01.102: 10.244.1.39:50532 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:01.097: 10.244.1.39:50532 (remote-node) <- 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:01.103: 10.244.1.39:50532 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:01.820: 10.244.0.206 (host) -> 10.244.0.174 (health) to-endpoint FORWARDED (ICMPv4 EchoRequest)
Jul 26 18:00:01.820: 10.244.0.206 (host) <- 10.244.0.174 (health) to-stack FORWARDED (ICMPv4 EchoReply)
Jul 26 18:00:03.346: kube-system/hubble-relay-599d47597b-8zpsw:43636 (ID:36220) <- 10.10.10.22:443 (host) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:03.347: kube-system/hubble-relay-599d47597b-8zpsw:43636 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 18:00:03.850: kube-system/coredns-589f44dc88-s9shj:45106 (ID:14327) -> 10.10.10.20:6443 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:04.370: 10.244.2.108:45444 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:04.384: 10.244.2.108:45444 (remote-node) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:04.384: 10.244.2.108:45444 (remote-node) <- 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:05.110: 10.244.2.108:45444 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:05.110: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:05.110: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 18:00:05.723: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) <- 10.10.10.20:4244 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:05.723: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) -> 10.10.10.20:4244 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 18:00:05.735: 10.244.0.206:38476 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:05.735: 10.244.0.206:38476 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:05.735: 10.244.0.206:38476 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:05.736: 10.244.0.206:38476 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:05.736: 10.244.0.206:38476 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:05.737: 10.244.0.206:38476 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:05.737: 10.244.0.206:38476 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:06.333: 10.244.2.108:47714 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:06.333: 10.244.2.108:47714 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:06.333: 10.244.2.108:47714 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:06.333: 10.244.2.108:47714 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:06.334: 10.244.2.108:47714 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:06.334: 10.244.2.108:47714 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, RST)
Jul 26 18:00:06.854: 10.244.0.206:52202 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:06.854: 10.244.0.206:52202 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:06.854: 10.244.0.206:52202 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:06.854: 10.244.0.206:52202 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:06.854: 10.244.0.206:52202 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:06.855: 10.244.0.206:52202 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:06.855: 10.244.0.206:52202 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:07.042: 10.244.2.108:47730 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:07.042: 10.244.2.108:47730 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:07.042: 10.244.2.108:47730 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:07.042: 10.244.2.108:47730 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:07.042: 10.244.2.108:47730 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:03.851: kube-system/coredns-589f44dc88-s9shj:45106 (ID:14327) <- 10.10.10.20:443 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:06.855: 10.244.0.206:52202 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:07.043: 10.244.2.108:47730 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, RST)
Jul 26 18:00:08.183: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) <- 10.10.10.21:4244 (remote-node) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:08.188: 10.244.1.39:58332 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:08.195: 10.244.1.39:58332 (remote-node) <- 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:08.196: 10.244.1.39:58332 (remote-node) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:08.768: 10.244.0.206:39002 (remote-node) <- 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:08.768: 10.244.0.206:39002 (remote-node) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:08.775: 10.244.0.206:39002 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:09.801: 10.244.1.39:44000 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:09.801: 10.244.1.39:44000 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:09.801: 10.244.1.39:44000 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:09.801: 10.244.1.39:44000 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:09.802: 10.244.1.39:44000 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:09.802: 10.244.1.39:44000 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:09.802: 10.244.1.39:44000 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:10.211: 10.244.1.39:46960 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:10.211: 10.244.1.39:46960 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:10.211: 10.244.1.39:46960 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:10.211: 10.244.1.39:46960 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:10.211: 10.244.1.39:46960 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:10.211: 10.244.1.39:46960 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:10.211: 10.244.1.39:46960 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:10.466: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) -> 10.10.10.20:6443 (host) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:10.803: 10.244.1.39:36780 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:10.803: 10.244.1.39:36780 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:10.803: 10.244.1.39:36780 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:10.803: 10.244.1.39:36780 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:10.803: 10.244.1.39:36780 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:10.804: 10.244.1.39:36780 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:10.804: 10.244.1.39:36780 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:08.183: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) -> 10.10.10.21:4244 (remote-node) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:10.466: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) <- 10.10.10.20:443 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:10.899: 10.244.1.39:36788 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:10.900: 10.244.1.39:36788 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:10.900: 10.244.1.39:36788 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:10.900: 10.244.1.39:36788 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:10.900: 10.244.1.39:36788 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:10.901: 10.244.1.39:36788 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:10.901: 10.244.1.39:36788 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:10.901: 10.244.1.39:36788 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:12.267: deny-demo/trusted-client-d6bfd74cc-bwc8f:48488 (ID:12579) -> deny-demo/backend-db9548689-hmpqv:80 (ID:21107) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN ALLOWED (TCP Flags: SYN)
Jul 26 18:00:12.267: deny-demo/trusted-client-d6bfd74cc-bwc8f:48488 (ID:12579) -> deny-demo/backend-db9548689-hmpqv:80 (ID:21107) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:12.267: deny-demo/trusted-client-d6bfd74cc-bwc8f:48488 (ID:12579) <- deny-demo/backend-db9548689-hmpqv:80 (ID:21107) to-overlay FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:12.268: deny-demo/trusted-client-d6bfd74cc-bwc8f:48488 (ID:12579) -> deny-demo/backend-db9548689-hmpqv:80 (ID:21107) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:12.268: deny-demo/trusted-client-d6bfd74cc-bwc8f:48488 (ID:12579) -> deny-demo/backend-db9548689-hmpqv:80 (ID:21107) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:12.268: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:12.268: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:12.269: deny-demo/trusted-client-d6bfd74cc-bwc8f:48488 (ID:12579) <- deny-demo/backend-db9548689-hmpqv:80 (ID:21107) to-overlay FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:12.269: deny-demo/trusted-client-d6bfd74cc-bwc8f:48488 (ID:12579) -> deny-demo/backend-db9548689-hmpqv:80 (ID:21107) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:12.270: deny-demo/trusted-client-d6bfd74cc-bwc8f:48488 (ID:12579) <- deny-demo/backend-db9548689-hmpqv:80 (ID:21107) to-overlay FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:12.270: deny-demo/trusted-client-d6bfd74cc-bwc8f:48488 (ID:12579) -> deny-demo/backend-db9548689-hmpqv:80 (ID:21107) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:12.272: deny-demo/trusted-client-d6bfd74cc-bwc8f:36663 (ID:12579) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 18:00:12.272: deny-demo/trusted-client-d6bfd74cc-bwc8f:55545 (ID:12579) -> kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 18:00:12.272: deny-demo/trusted-client-d6bfd74cc-bwc8f:55545 (ID:12579) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 18:00:12.273: deny-demo/trusted-client-d6bfd74cc-bwc8f:36663 (ID:12579) <- kube-system/coredns-589f44dc88-s9shj:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 18:00:12.273: deny-demo/trusted-client-d6bfd74cc-bwc8f:48488 (ID:12579) -> deny-demo/backend-db9548689-hmpqv:80 (ID:21107) to-overlay FORWARDED (TCP Flags: SYN)
Jul 26 18:00:12.273: deny-demo/trusted-client-d6bfd74cc-bwc8f:48488 (ID:12579) <- deny-demo/backend-db9548689-hmpqv:80 (ID:21107) to-endpoint FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:12.273: deny-demo/trusted-client-d6bfd74cc-bwc8f:48488 (ID:12579) -> deny-demo/backend-db9548689-hmpqv:80 (ID:21107) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:12.274: deny-demo/trusted-client-d6bfd74cc-bwc8f:48488 (ID:12579) -> deny-demo/backend-db9548689-hmpqv:80 (ID:21107) to-overlay FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:12.275: deny-demo/trusted-client-d6bfd74cc-bwc8f:48488 (ID:12579) <- deny-demo/backend-db9548689-hmpqv:80 (ID:21107) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:12.275: deny-demo/trusted-client-d6bfd74cc-bwc8f:48488 (ID:12579) -> deny-demo/backend-db9548689-hmpqv:80 (ID:21107) to-overlay FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:12.276: deny-demo/trusted-client-d6bfd74cc-bwc8f:48488 (ID:12579) <- deny-demo/backend-db9548689-hmpqv:80 (ID:21107) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:12.398: deny-demo/blocked-client-7f785dc47c-fg5cs:34528 (ID:25914) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 18:00:12.399: deny-demo/blocked-client-7f785dc47c-fg5cs:45715 (ID:25914) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 18:00:12.399: deny-demo/blocked-client-7f785dc47c-fg5cs:34528 (ID:25914) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 18:00:12.399: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) <- 10.10.10.20:4244 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:12.399: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) -> 10.10.10.20:4244 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 18:00:12.399: deny-demo/blocked-client-7f785dc47c-fg5cs:45715 (ID:25914) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 18:00:12.400: deny-demo/blocked-client-7f785dc47c-fg5cs:44904 (ID:25914) <> deny-demo/backend-db9548689-hmpqv:80 (ID:21107) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN DENIED (TCP Flags: SYN)
Jul 26 18:00:12.400: deny-demo/blocked-client-7f785dc47c-fg5cs:44904 (ID:25914) <> deny-demo/backend-db9548689-hmpqv:80 (ID:21107) Policy denied by denylist DROPPED (TCP Flags: SYN)
Jul 26 18:00:12.412: deny-demo/blocked-client-7f785dc47c-fg5cs:34528 (ID:25914) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 18:00:12.413: deny-demo/blocked-client-7f785dc47c-fg5cs:34528 (ID:25914) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 18:00:12.413: deny-demo/blocked-client-7f785dc47c-fg5cs:45715 (ID:25914) -> kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-endpoint FORWARDED (UDP)
Jul 26 18:00:12.413: deny-demo/blocked-client-7f785dc47c-fg5cs:45715 (ID:25914) <- kube-system/coredns-589f44dc88-4p5kh:53 (ID:14327) to-overlay FORWARDED (UDP)
Jul 26 18:00:12.754: 10.244.2.108:36958 (host) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:12.754: 10.244.2.108:36958 (host) <- 10.244.2.36:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 18:00:13.458: deny-demo/blocked-client-7f785dc47c-fg5cs:44904 (ID:25914) <> deny-demo/backend-db9548689-hmpqv:80 (ID:21107) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN DENIED (TCP Flags: SYN)
Jul 26 18:00:13.458: deny-demo/blocked-client-7f785dc47c-fg5cs:44904 (ID:25914) <> deny-demo/backend-db9548689-hmpqv:80 (ID:21107) Policy denied by denylist DROPPED (TCP Flags: SYN)
Jul 26 18:00:13.973: 10.244.0.206:45466 (remote-node) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:13.973: 10.244.0.206:45466 (remote-node) <- 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:13.973: 10.244.0.206:45466 (remote-node) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:13.986: 10.244.0.206:45466 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:13.987: 10.244.0.206:45466 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:14.370: 10.244.2.108:52194 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:14.371: 10.244.2.108:52194 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:14.371: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) <- 10.10.10.21:4244 (remote-node) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:14.371: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) -> 10.10.10.21:4244 (remote-node) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 18:00:14.377: 10.244.2.108:52194 (remote-node) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:14.377: 10.244.2.108:52194 (remote-node) <- 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:14.378: 10.244.2.108:52194 (remote-node) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:14.400: 10.244.1.39:49140 (host) <- 10.244.1.219:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 18:00:14.400: 10.244.1.39:49140 (host) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:14.482: deny-demo/blocked-client-7f785dc47c-fg5cs:44904 (ID:25914) <> deny-demo/backend-db9548689-hmpqv:80 (ID:21107) policy-verdict:none TRAFFIC_DIRECTION_UNKNOWN DENIED (TCP Flags: SYN)
Jul 26 18:00:14.482: deny-demo/blocked-client-7f785dc47c-fg5cs:44904 (ID:25914) <> deny-demo/backend-db9548689-hmpqv:80 (ID:21107) Policy denied by denylist DROPPED (TCP Flags: SYN)
Jul 26 18:00:15.237: kube-system/coredns-589f44dc88-s9shj:45106 (ID:14327) <- 10.10.10.20:443 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:15.237: kube-system/coredns-589f44dc88-s9shj:45106 (ID:14327) -> 10.10.10.20:6443 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 18:00:15.734: 10.244.0.206:47948 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:15.734: 10.244.0.206:47948 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:15.734: 10.244.0.206:47948 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:15.734: 10.244.0.206:47948 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:15.734: 10.244.0.206:47948 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:15.735: 10.244.0.206:47948 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:15.735: 10.244.0.206:47948 (host) <- kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:15.735: 10.244.0.206:47948 (host) -> kube-system/coredns-589f44dc88-4p5kh:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:16.146: 10.244.1.39:50532 (remote-node) <- 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:16.147: 10.244.1.39:50532 (remote-node) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:16.332: 10.244.2.108:56420 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:16.332: 10.244.2.108:56420 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:16.332: 10.244.2.108:56420 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:16.333: 10.244.2.108:56420 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:16.333: 10.244.2.108:56420 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:16.335: 10.244.2.108:56420 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, RST)
Jul 26 18:00:16.836: 10.244.0.206:55920 (host) <- 10.244.0.174:4240 (health) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 18:00:16.836: 10.244.0.206:55920 (host) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:16.853: 10.244.0.206:42680 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:16.853: 10.244.0.206:42680 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:16.853: 10.244.0.206:42680 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:16.855: 10.244.0.206:42680 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:16.855: 10.244.0.206:42680 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:16.855: 10.244.0.206:42680 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:16.855: 10.244.0.206:42680 (host) <- kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:17.041: 10.244.2.108:56422 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:17.041: 10.244.2.108:56422 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:17.041: 10.244.2.108:56422 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:17.042: 10.244.2.108:56422 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:17.042: 10.244.2.108:56422 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:17.043: 10.244.2.108:56422 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:17.043: 10.244.2.108:56422 (host) <- kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:17.043: 10.244.2.108:56422 (host) -> kube-system/hubble-relay-599d47597b-8zpsw:4222 (ID:36220) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:18.706: kube-system/hubble-relay-599d47597b-8zpsw:43636 (ID:36220) <- 10.10.10.22:443 (host) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:18.706: kube-system/hubble-relay-599d47597b-8zpsw:43636 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 18:00:18.707: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) <- 10.10.10.22:4244 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:16.153: 10.244.1.39:50532 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:16.855: 10.244.0.206:42680 (host) -> kube-system/coredns-589f44dc88-4p5kh:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:18.707: kube-system/hubble-relay-599d47597b-8zpsw:52964 (ID:36220) -> 10.10.10.22:4244 (host) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:19.800: 10.244.1.39:42172 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:19.800: 10.244.1.39:42172 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:19.800: 10.244.1.39:42172 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:19.801: 10.244.1.39:42172 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:19.801: 10.244.1.39:42172 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:19.801: 10.244.1.39:42172 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:19.802: 10.244.1.39:42172 (host) <- kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:19.802: 10.244.1.39:42172 (host) -> kube-system/coredns-589f44dc88-s9shj:8181 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:20.206: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) <- 10.10.10.21:4244 (remote-node) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:20.206: kube-system/hubble-relay-599d47597b-8zpsw:59296 (ID:36220) -> 10.10.10.21:4244 (remote-node) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 18:00:20.211: 10.244.1.39:58798 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:20.211: 10.244.1.39:58798 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:20.211: 10.244.1.39:58798 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:20.212: 10.244.1.39:58798 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:20.212: 10.244.1.39:58798 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:20.212: 10.244.1.39:58798 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:20.212: 10.244.1.39:58798 (host) <- kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:20.212: 10.244.1.39:58798 (host) -> kube-system/coredns-589f44dc88-s9shj:8080 (ID:14327) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:20.403: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) <- 10.10.10.20:4244 (kube-apiserver) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:20.403: kube-system/hubble-relay-599d47597b-8zpsw:36292 (ID:36220) -> 10.10.10.20:4244 (kube-apiserver) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 18:00:20.416: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) <- 10.10.10.20:443 (host) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:20.416: kube-system/coredns-589f44dc88-4p5kh:58894 (ID:14327) -> 10.10.10.20:6443 (host) to-stack FORWARDED (TCP Flags: ACK)
Jul 26 18:00:20.469: 10.244.2.108:45444 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:20.483: 10.244.2.108:45444 (remote-node) <- 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:20.483: 10.244.2.108:45444 (remote-node) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:20.560: 10.244.1.39 (remote-node) <> 10.244.0.174 (health) to-overlay FORWARDED (ICMPv4 EchoRequest)
Jul 26 18:00:20.560: 10.244.1.39:58332 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:20.561: 10.244.1.39:58332 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:20.567: 10.244.1.39 (remote-node) -> 10.244.0.174 (health) to-endpoint FORWARDED (ICMPv4 EchoRequest)
Jul 26 18:00:20.567: 10.244.1.39 (remote-node) <- 10.244.0.174 (health) to-overlay FORWARDED (ICMPv4 EchoReply)
Jul 26 18:00:20.568: 10.244.1.39:58332 (remote-node) -> 10.244.0.174:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:20.568: 10.244.1.39:58332 (remote-node) <- 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:20.803: 10.244.1.39:52136 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:20.803: 10.244.1.39:52136 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:20.803: 10.244.1.39:52136 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:20.803: 10.244.1.39:52136 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:20.804: 10.244.1.39:52136 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:20.804: 10.244.1.39:52136 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:20.805: 10.244.1.39:52136 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:20.805: 10.244.1.39:52136 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:20.899: 10.244.1.39:52142 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:20.899: 10.244.1.39:52142 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:20.899: 10.244.1.39:52142 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:20.900: 10.244.1.39:52142 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:20.901: 10.244.1.39:52142 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:20.901: 10.244.1.39:52142 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:20.901: 10.244.1.39:52142 (host) -> kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:21.265: 10.244.0.206:56090 (remote-node) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: SYN)
Jul 26 18:00:21.265: 10.244.0.206:56090 (remote-node) <- 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: SYN, ACK)
Jul 26 18:00:21.266: 10.244.0.206:56090 (remote-node) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:21.266: 10.244.0.206 (remote-node) -> 10.244.2.36 (health) to-endpoint FORWARDED (ICMPv4 EchoRequest)
Jul 26 18:00:21.266: 10.244.0.206 (remote-node) <- 10.244.2.36 (health) to-overlay FORWARDED (ICMPv4 EchoReply)
Jul 26 18:00:21.267: 10.244.0.206:56090 (remote-node) -> 10.244.2.36:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:21.267: 10.244.0.206:56090 (remote-node) <- 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:21.279: 10.244.0.206:56090 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: SYN)
Jul 26 18:00:21.279: 10.244.0.206:56090 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:21.279: 10.244.0.206 (remote-node) <> 10.244.2.36 (health) to-overlay FORWARDED (ICMPv4 EchoRequest)
Jul 26 18:00:21.280: 10.244.0.206:56090 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:21.280: 10.244.0.206:56090 (remote-node) <> 10.244.2.36:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
Jul 26 18:00:21.666: 10.244.2.108 (remote-node) <> 10.244.0.174 (health) to-overlay FORWARDED (ICMPv4 EchoRequest)
Jul 26 18:00:21.666: 10.244.2.108:45444 (remote-node) <> 10.244.0.174:4240 (health) to-overlay FORWARDED (TCP Flags: ACK, PSH)
Jul 26 18:00:20.901: 10.244.1.39:52142 (host) <- kube-system/hubble-ui-6b4f8fcff9-r89p8:8081 (ID:5858) to-stack FORWARDED (TCP Flags: ACK, FIN)
Jul 26 18:00:21.679: 10.244.2.108 (remote-node) -> 10.244.0.174 (health) to-endpoint FORWARDED (ICMPv4 EchoRequest)
Jul 26 18:00:21.679: 10.244.2.108 (remote-node) <- 10.244.0.174 (health) to-overlay FORWARDED (ICMPv4 EchoReply)
Jul 26 18:00:23.548: 10.244.0.206:39002 (remote-node) -> 10.244.1.219:4240 (health) to-endpoint FORWARDED (TCP Flags: ACK)
Jul 26 18:00:23.555: 10.244.0.206:39002 (remote-node) <> 10.244.1.219:4240 (health) to-overlay FORWARDED (TCP Flags: ACK)
